<resources>
    <string name="app_name">FSU Group Project</string>
    <string name="transactions">Transactions</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="balance">Balance:</string>
    <string name="starter_value">$500.00</string>
    <string name="description">Description</string>
    <string name="amount">Amount ($)</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="money_sign">$</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="back">Back</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_description">Enter description</string>
    <string name="descriptionItem">Description:</string>
    <string name="amountItem">Amount:</string>

    <string-array name="TransactionTypes">
        <item>Select:</item>
        <item>Rent</item>
        <item>Bills</item>
        <item>Food</item>
        <item>Work/School</item>
        <item>Personal</item>
        <item>Other</item>
    </string-array>
</resources>